--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "~0.4.5",
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-jshint": "^0.9.2",
     "grunt-contrib-nodeunit": "^0.3.3",
     "grunt-contrib-watch": "^0.6.1",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "grunt-notify": "~0.3.1",
+    "load-grunt-tasks": "~0.6.0",
+    "time-grunt": "~1.0.0"
   },
   "peerDependencies": {
     "grunt": "~0.4.5"
