updated git urls

--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
     "name": "grunt-mavenify",
     "description": "run maven goals through grunt",
-    "version": "0.1.0",
-    "homepage": "https://github.com/tenzinkabsang/mavenify",
+    "version": "0.1.1",
+    "homepage": "https://github.com/tenzinkabsang/grunt-mavenify",
     "author": {
         "name": "tenzinkabzang"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/tenzinkabsang/mavenify.git"
+        "url": "https://github.com/tenzinkabsang/grunt-mavenify.git"
     },
     "bugs": {
-        "url": "https://github.com/tenzinkabsang/mavenify/issues"
+        "url": "https://github.com/tenzinkabsang/grunt-mavenify/issues"
     },
     "licenses": [
         {
             "type": "MIT",
-            "url": "https://github.com/tenzinkabsang/mavenify/blob/master/LICENSE-MIT"
+            "url": "https://github.com/tenzinkabsang/grunt-mavenify/blob/master/LICENSE-MIT"
         }
     ],
     "engines": {
